--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -94,7 +94,7 @@
 <script>
     function deleteUser(id) {
         $.ajax({
-            url: '/survey_form/delete/' + id,
+            url: '/form/delete/' + id,
             type: 'DELETE',
             success: function (response) {
                 console.log(response);
